fixed spacing and borders in DisplayEvent and App.css for leaflet popups

--- a/unimeet/src/App.css
+++ b/unimeet/src/App.css
@@ -238,7 +238,6 @@
 
 .mainArea {
   height: 700px;
-  border: 4px solid blue;
   position: relative;
   display: block;
   justify-content: center;
@@ -254,21 +253,26 @@
   flex-wrap: wrap;
   justify-content: center;
   align-content:center;
-  border: solid black 5px;
+  border: solid grey 3px;
   height: 700px;
   width: 78%;
+}
+
+.leaflet-popup {
+  width: 260px;
 }
 
 #sideMenu {
   position: relative;
   display: none;
   float: left;
-  border: 5px solid red;
 }
 
 #sideMenu.open {
   display: block;
   height: 100%;
   width: 22%;
-  border: 5px solid purple;
+  border-top: 3px solid grey;
+  border-left: 3px solid grey;
+  border-bottom: 3px solid grey;
 }
